fixed the layout issue

--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -8,9 +8,10 @@
 }
 
 body{
+  background-color: #000000;
   background-image: url('./images/bg.png') !important; ;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 100% 90%;
   background-position: center ;
 }
 
